Update: about, dashboard, products, shop.

--- a/third-project/html/about.html
+++ b/third-project/html/about.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="../css/style-dashboard.css">
+    <link rel="stylesheet" href="../css/style-about.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-    <script src="../js/script-dashboard.js"></script>
+    <script src="../js/script-about.js"></script>
 
     <section class="vh-100 base-custom">
         <!-- Navbar -->
@@ -31,7 +31,7 @@
                             <a class="nav-link active" aria-current="page" href="../html/products.html">Catálogo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../html/shop.html">Tienda</a>
+                            <a class="nav-link active" aria-current="page" href="#">Tienda</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="../html/about.html">Acerca</a>
@@ -53,7 +53,7 @@
 
         <!-- Jumbotron -->
         <div class="mt-3 p-4 shadow-4 rounded-3 bg-light">
-            <h2>Hello world!</h2>
+            <h2>About</h2>
             <p>
                 This is a simple hero unit, a simple jumbotron-style component for calling extra
                 attention to featured content or information.
