--- a/third-project/html/error.html
+++ b/third-project/html/error.html
@@ -1,11 +1,13 @@
+<!-- Rodrigo Barba - Shinia -->
 <!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Flora Vibrante - Error</title>
     <link rel="stylesheet" href="../css/style-error.css">
+    <link rel="shortcut icon" href="../img/flower-logo.svg" type="image/svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -16,11 +18,15 @@
         <div class="container h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                    <div class="card card-custom shadow-2-strong">
+                    <div class="card-custom shadow-2-strong">
                         <div class="card-body p-5 text-center">
-                            <h3>Error 404</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit molestiae magnam quo rem aut, consequatur, repellat vel, placeat eaque libero asperiores dignissimos exercitationem modi quidem voluptatum debitis mollitia alias consectetur.</p>
-                            <button class="btn btn-danger btn-lg" onclick="reback()" type="submit">Iniciar Sesión</button>
+                            <img class="mb-3" src="../img/flower-error.svg" alt="" srcset="">
+                            <h1>Error 404</h1>
+                            <p>¡Ups! La página que buscas no se encuentra en nuestro jardín. Parece que la flor ha
+                                marchitado y la página que intentabas encontrar no está disponible. Por favor, verifica
+                                la URL o vuelve a nuestra página de inicio para explorar nuestro hermoso jardín digital.
+                            </p>
+                            <button class="btn btn-success btn-md" onclick="reback()" type="submit">Regresar</button>
                         </div>
                     </div>
                 </div>
