--- a/third-project/html/index.html
+++ b/third-project/html/index.html
@@ -1,13 +1,16 @@
+<!-- Rodrigo Barba - Shinia -->
 <!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Flora Vibrante - Iniciar Sesión</title>
     <link rel="stylesheet" href="../css/style-index.css">
+    <link rel="shortcut icon" href="../img/flower-logo.svg" type="image/svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8562bd2fa0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,21 +19,20 @@
         <div class="container h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                    <div class="card card-custom shadow-2-strong">
-                        <div class="card-body p-5 text-center">
-                            <h3 class="mb-3">Iniciar Sesión</h3>
-
+                    <div class="card-custom">
+                        <div class="card-body card-custom p-5 text-center">
+                            <img class="mb-3" src="../img/flower-logo.svg" alt="" srcset="">
+                            <h1 class="mb-3">Flora Vibrante</h1>
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="usernameInput">Usuario</label>
                                 <input type="email" id="usernameInput" class="form-control form-control-lg" />
                             </div>
-
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="passwordInput">Contraseña</label>
                                 <input type="password" id="passwordInput" class="form-control form-control-lg" />
                             </div>
-
-                            <button class="btn btn-danger btn-lg" onclick="authenticate()" type="submit">Iniciar Sesión</button>
+                            <button class="btn btn-success btn-md" onclick="authenticate()" type="submit">Iniciar
+                                Sesión</button>
                         </div>
                     </div>
                 </div>
