--- a/third-project/html/products.html
+++ b/third-project/html/products.html
@@ -1,40 +1,44 @@
+<!-- Rodrigo Barba - Shinia -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo</title>
+    <title>Flora Vibrante - Catálogo</title>
     <link rel="stylesheet" href="../css/style-products.css">
+    <link rel="shortcut icon" href="../img/flower-logo.svg" type="image/svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8562bd2fa0.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="base-custom">
-    <script src="../js/script-dashboard.js"></script>
 
-    <section class="">
+    <section class="mt-3">
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-custom navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../html/dashboard.html">
-                    <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap"
-                        width="30" height="24" class="mb-1">
+                <a class="navbar-brand" href="../html/dashboard.html" style="color: #80C2AF;">
+                    <img src="../img/flower-nav.svg" alt="Bootstrap" width="30" height="24" class="mb-1">
+                    Flora Vibrante
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
+                    style="border-radius: 80px;">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse show" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../html/products.html">Catálogo</a>
+                            <a class="nav-link active admin-link" aria-current="page"
+                                href="../html/products.html">Catálogo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Tienda</a>
+                            <a class="nav-link active" aria-current="page" href="../html/shop.html">Tienda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Acerca</a>
+                            <a class="nav-link active" aria-current="page" href="../html/about.html">Acerca</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -42,7 +46,7 @@
                                 Usuario
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+                                <li><a class="dropdown-item" onclick="logout()">Cerrar Sesión</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -50,48 +54,51 @@
             </div>
         </nav>
         <!-- Navbar -->
+    </section>
 
+    <section>
         <!-- Formulario de Crear/Editar Producto -->
-        <div class="container">
-            <h1 class="my-4">Cátalogo</h1>
-
+        <div class="container-input-custom">
+            <h1 class="pt-2 mt-3">Insertar/Actualizar Producto</i></h1>
             <div class="row">
                 <div class="col-md-12">
                     <form id="product-form">
                         <input type="hidden" id="product-id" value="">
-                        <div class="form-group">
+                        <div class="form-group mt-3">
                             <label for="product-name">Nombre:</label>
                             <input type="text" class="form-control" id="product-name" required>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group mt-3">
                             <label for="product-description">Descripción:</label>
                             <input type="text" class="form-control" id="product-description" required>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group mt-3">
                             <label for="product-price">Precio:</label>
                             <input type="number" class="form-control" id="product-price" required>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group mt-3">
                             <label for="product-image-url">URL de la Imagen:</label>
                             <input type="text" class="form-control" id="product-image-url" required>
                         </div>
-                        <button type="button" class="btn btn-primary mt-3" onclick="saveProduct()">Guardar</button>
+                        <button type="button" class="btn btn-success mt-3" onclick="saveProduct()">Guardar</button>
                     </form>
                 </div>
             </div>
+        </div>
+        <!-- Formulario de Crear/Editar Producto -->
+    </section>
 
-            <hr>
-
-            <!-- Lista de Productos -->
-            <h2 class="mb-2">Lista de Productos</h2>
+    <Section>
+        <!-- Lista de Productos -->
+        <div class="container-output-custom mt-3">
+            <h1 class="pt-2 mt-3">Lista de Productos</h1>
             <div class="table-responsive">
                 <div class="row">
                     <div class="col-md-12">
-                        
-                        <table class="table" style="overflow: sc;">
+                        <table class="table align-middle text-center" style="overflow: sc;">
                             <thead>
                                 <tr>
-                                    <th>ID</th>
+                                    <th>Identificador</th>
                                     <th>Nombre</th>
                                     <th>Descripción</th>
                                     <th>Precio</th>
@@ -107,7 +114,8 @@
                 </div>
             </div>
         </div>
-        <!-- Formulario de Crear/Editar Producto -->
+        <!-- Lista de Productos -->
+    </Section>
 
     </section>
     <script src="../js/script-products.js"></script>
