--- a/third-project/html/shop.html
+++ b/third-project/html/shop.html
@@ -1,113 +1,149 @@
+<!-- Rodrigo Barba - Shinia -->
 <!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dashboard</title>
+    <title>Flora Vibrante - Tienda</title>
     <link rel="stylesheet" href="../css/style-shop.css">
+    <link rel="shortcut icon" href="../img/flower-logo.svg" type="image/svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8562bd2fa0.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="vh-100 base-custom">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light w-auto">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../html/dashboard.html">
-                <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30"
-                    height="24" class="mb-1">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse show" id="navbarNav">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../html/products.html">Catálogo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Tienda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../html/about.html">Acerca</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Usuario
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+<body class="base-custom">
+    <div class="content-blur">
+        <section class="mt-3">
+            <!-- Navbar -->
+            <nav class="navbar navbar-custom navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../html/dashboard.html" style="color: #80C2AF;">
+                        <img src="../img/flower-nav.svg" alt="Bootstrap" width="30" height="24" class="mb-1">
+                        Flora Vibrante
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
+                        style="border-radius: 80px;">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse show" id="navbarNav">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active admin-link" aria-current="page"
+                                    href="../html/products.html">Catálogo</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../html/shop.html">Tienda</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../html/about.html">Acerca</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link active dropdown-toggle" href="#" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    Usuario
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" onclick="logout()">Cerrar Sesión</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <!-- Toggle (Calculadora) -->
+                                <p>
+                                    <button class="btn btn-success btn-calculator position-absolute bottom-0 end-0"
+                                        type="button" data-bs-toggle="collapse" data-bs-target="#collapseCalculator"
+                                        aria-expanded="false" aria-controls="collapseCalculator" id="blurToggle">
+                                        Calculadora
+                                    </button>
+                                </p>
+                                <!-- Toggle (Calculadora) -->
+                            </li>
                         </ul>
-                    </li>
-                </ul>
+                    </div>
+                </div>
+            </nav>
+            <!-- Navbar -->
+        </section>
+
+        <section class="mt-3">
+            <!-- Productos y Carrito -->
+            <div class="container-custom">
+                <div class="row">
+                    <div class="col-12 col-md-12 col-lg-6">
+                        <div class="col-products">
+                            <div class="row container-inner-shop m-auto mt-4" id="productList"></div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-12 col-lg-6">
+                        <div class="col-checkout text-center">
+                            <div class="container">
+                                <section>
+                                    <h1 class="pt-3">Carrito Floral <i class="fa-solid fa-cart-shopping"></i></h1>
+                                    <h4>Subtotal: <span id="totalCheckout">0.00</span></h4>
+                                    <button class="btn btn-success btn-comprar mb-3 mt-3">Checkout</button>
+                                </section>
+                                <hr class="border border-success border-2 opacity-50 w-75 m-auto mt-3 mb-3">
+                                <div class="container-fluid" style="overflow: scroll;">
+                                    <table class="table table-custom table-borderless text-center">
+                                        <thead>
+                                            <tr>
+                                                <th>Identificador</th>
+                                                <th>Producto</th>
+                                                <th>Cantidad</th>
+                                                <th>P. Unitario</th>
+                                                <th>P. Total</th>
+                                                <th>Acciones</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="checkoutCart">
+                                            <!-- Productos del carrito. -->
+                                        </tbody>
+                                    </table>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </nav>
-    <!-- Navbar -->
-
-    <!-- Jumbotron -->
-    <div class="mt-3 p-4 shadow-4 rounded-3 bg-light">
-        <h2>Shop</h2>
-        <p>
-            This is a simple hero unit, a simple jumbotron-style component for calling extra
-            attention to featured content or information.
-        </p>
-
-        <hr />
-
-        <p>
-            It uses utility classes for typography and spacing to space content out within the
-            larger container.
-        </p>
-        <button type="button" class="btn btn-primary">
-            Learn more
-        </button>
+            <!-- Productos y Carrito -->
+        </section>
     </div>
-    <!-- Jumbotron -->
 
-    <!-- Toggle (Calculadora) -->
-    <p>
-        <button class="btn btn-primary btn-calculator position-absolute bottom-0 end-0" type="button"
-            data-bs-toggle="collapse" data-bs-target="#collapseCalculator" aria-expanded="false"
-            aria-controls="collapseCalculator">
-            Calculadora
-        </button>
-    </p>
-    <!-- Toggle (Calculadora) -->
-
-    <!-- Contenedor (Calculadora) -->
-    <div style="min-height: 120px;">
-        <div class="collapse collapse-horizontal position-absolute top-50 start-50 translate-middle"
-            id="collapseCalculator">
-            <div class="calculator">
-                <div class="calculator-output" id="display" onclick="appendToDisplay('0')">0</div>
-                <div class="calculator-keys">
-                    <button class="calculator-key calculator-key-operator" onclick="appendToDisplay('+')">+</button>
-                    <button class="calculator-key calculator-key-operator" onclick="appendToDisplay('-')">-</button>
-                    <button class="calculator-key calculator-key-operator" onclick="appendToDisplay('*')">&times;</button>
-                    <button class="calculator-key calculator-key-operator" onclick="appendToDisplay('/')">÷</button>
-                    <button class="calculator-key" onclick="appendToDisplay('7')">7</button>
-                    <button class="calculator-key" onclick="appendToDisplay('8')">8</button>
-                    <button class="calculator-key" onclick="appendToDisplay('9')">9</button>
-                    <button class="calculator-key" onclick="appendToDisplay('4')">4</button>
-                    <button class="calculator-key" onclick="appendToDisplay('5')">5</button>
-                    <button class="calculator-key" onclick="appendToDisplay('6')">6</button>
-                    <button class="calculator-key" onclick="appendToDisplay('1')">1</button>
-                    <button class="calculator-key" onclick="appendToDisplay('2')">2</button>
-                    <button class="calculator-key" onclick="appendToDisplay('3')">3</button>
-                    <button class="calculator-key" onclick="appendToDisplay('0')">0</button>
-                    <button class="calculator-key" onclick="appendToDisplay('.')">.</button>
-                    <button class="calculator-key" onclick="clearDisplay()">AC</button>
-                    <button class="calculator-key calculator-key-enter" onclick="calculateResult()">=</button>
+    <section>
+        <!-- Calculadora -->
+        <div>
+            <div class="collapse collapse-horizontal position-absolute top-50 start-50 translate-middle z-3"
+                id="collapseCalculator">
+                <div class="calculator">
+                    <div class="calculator-output" id="display" onclick="appendToDisplay('0')">0</div>
+                    <div class="calculator-keys">
+                        <button class="calculator-key calculator-key-operator" onclick="appendToDisplay('+')">+</button>
+                        <button class="calculator-key calculator-key-operator" onclick="appendToDisplay('-')">-</button>
+                        <button class="calculator-key calculator-key-operator"
+                            onclick="appendToDisplay('*')">&times;</button>
+                        <button class="calculator-key calculator-key-operator" onclick="appendToDisplay('/')">÷</button>
+                        <button class="calculator-key" onclick="appendToDisplay('7')">7</button>
+                        <button class="calculator-key" onclick="appendToDisplay('8')">8</button>
+                        <button class="calculator-key" onclick="appendToDisplay('9')">9</button>
+                        <button class="calculator-key" onclick="appendToDisplay('4')">4</button>
+                        <button class="calculator-key" onclick="appendToDisplay('5')">5</button>
+                        <button class="calculator-key" onclick="appendToDisplay('6')">6</button>
+                        <button class="calculator-key" onclick="appendToDisplay('1')">1</button>
+                        <button class="calculator-key" onclick="appendToDisplay('2')">2</button>
+                        <button class="calculator-key" onclick="appendToDisplay('3')">3</button>
+                        <button class="calculator-key" onclick="appendToDisplay('0')">0</button>
+                        <button class="calculator-key" onclick="appendToDisplay('.')">.</button>
+                        <button class="calculator-key" onclick="clearDisplay()">AC</button>
+                        <button class="calculator-key calculator-key-enter" onclick="calculateResult()">=</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Contenedor (Calculadora) -->
-
+        <!-- Calculadora -->
+    </section>
     <script src="../js/script-shop.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
