--- a/third-project/html/products.html
+++ b/third-project/html/products.html
@@ -74,11 +74,11 @@
                         </div>
                         <div class="form-group mt-3">
                             <label for="product-price">Precio:</label>
-                            <input type="number" class="form-control" id="product-price" required>
+                            <input type="number" class="form-control" id="product-price" min="1" max="999" required>
                         </div>
                         <div class="form-group mt-3">
                             <label for="product-image-url">URL de la Imagen:</label>
-                            <input type="text" class="form-control" id="product-image-url" required>
+                            <input type="text" class="form-control" id="product-image-url">
                         </div>
                         <button type="button" class="btn btn-success mt-3" onclick="saveProduct()">Guardar</button>
                     </form>
